Custom user-agent option
Change-Id: If10abc93a2eb34b91197d9bcabc8eafad0aefed7
Signed-Off-By: Jef Oliver <jeagoss@gmail.com>

Conflicts:

	res/values/strings.xml
	res/xml/preferences.xml
	src/com/android/mms/transaction/HttpUtils.java
	src/com/android/mms/ui/MessagingPreferenceActivity.java

ported from https://github.com/CyanogenMod/android_packages_apps_Mms/commit/afac2716ff7c43234fe1ba4a0247a25707c3a6c1

Custom user-agent is necessary for MMS access on the Softbank mobile network in Japan.

Signed-off-by: rdgate <rdgate@gmail.com>

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -421,4 +421,10 @@
     <string name="pref_title_mms_send_on_enter">Enterキーで送信</string>
     <string name="pref_summary_mms_send_on_enter">Enterキーの押下でメッセージを送信するかどうか切り替える</string>
 
+    <!-- Custom user-agent -->
+    <string name="pref_mms_custom_option">カスタム..</string>
+    <string name="pref_title_mms_user_agent">カスタムUser-Agent</string>
+    <string name="pref_summary_mms_user_agent">MMSクライアントのUser-Agent文字列を変更する</string>
+    <string name="pref_mms_user_agent_custom_set">設定されているUser-Agent:\n</string>
+
 </resources>
