Custom user-agent option
PS2: fix translation entries

Change-Id: If10abc93a2eb34b91197d9bcabc8eafad0aefed7
Signed-Off-By: Jef Oliver <jeagoss@gmail.com>

Conflicts:

	res/values/strings.xml
	res/xml/preferences.xml
	src/com/android/mms/transaction/HttpUtils.java
	src/com/android/mms/ui/MessagingPreferenceActivity.java

ported from https://github.com/CyanogenMod/android_packages_apps_Mms/commit/afac2716ff7c43234fe1ba4a0247a25707c3a6c1

Custom user-agent is necessary for MMS access on the Softbank mobile network in Japan.

Signed-off-by: rdgate <rdgate@gmail.com>

Conflicts:

	res/xml/preferences.xml
	src/com/android/mms/ui/MessagingPreferenceActivity.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -926,4 +926,17 @@
    <string name="sms_breath">Breathing SMS</string>
    <string name="sms_breath_summary">Will give your sms notifications a breathing effect in the statusbar.</string>
 
+    <!-- Custom user-agent -->
+    <string name="pref_mms_ua_default_android">Default Android</string>
+    <string name="pref_mms_ua_nokia_n95">Nokia N95</string>
+    <string name="pref_mms_ua_iphone_3_0">iPhone (3.0)</string>
+    <string name="pref_mms_ua_blackberry_8800">BlackBerry 8800</string>
+    <string name="pref_mms_ua_sonyericsson_w800i">Sony Ericsson W800i</string>
+    <string name="pref_mms_ua_softbank_x01t">SoftBank X01T</string>
+    <string name="pref_mms_ua_softbank_myrmms">SoftBank MyrMMS</string>
+    <string name="pref_mms_ua_custom_option">Custom\u2026</string>
+    <string name="pref_title_mms_user_agent">Custom User-Agent</string>
+    <string name="pref_summary_mms_user_agent">Spoof phone as a different model for MMS</string>
+    <string name="pref_mms_user_agent_custom_set">Custom User Agent set to:\n</string>
+
 </resources>
