Added ability to toggle enable/disable Send on Enter
Change-Id: Ic7cee9e5babc42d5c00ac50f7a490369b3a3d936

Conflicts:

	res/values-ja/strings.xml
	res/values/strings.xml
	res/xml/preferences.xml
	src/com/android/mms/ui/ComposeMessageActivity.java
	src/com/android/mms/ui/MessagingPreferenceActivity.java

ported from https://github.com/CyanogenMod/android_packages_apps_Mms/commit/c1c34810b3723a4e897d1c833057b17d3f6a0a05

Signed-off-by: rdgate <rdgate@gmail.com>

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -417,4 +417,8 @@
     <string name="only_three_please">3つまでしか選択できません</string>
     <string name="pref_title_quick_reply">クイックリプライ</string>
 
+    <!-- Send on Enter -->
+    <string name="pref_title_mms_send_on_enter">Enterキーで送信</string>
+    <string name="pref_summary_mms_send_on_enter">Enterキーの押下でメッセージを送信するかどうか切り替える</string>
+
 </resources>
