--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -913,4 +913,8 @@
     <string name="only_three_please">Only select three options at once</string>
     <string name="pref_title_quick_reply">Quick Reply</string>
 
+    <!-- Send on enter -->
+    <string name="pref_title_mms_send_on_enter">Send on Enter</string>
+    <string name="pref_summary_mms_send_on_enter">Enable/disable send message when Enter key pressed</string>
+
 </resources>
