--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -310,6 +310,8 @@
     <string name="pref_sms_settings_title">"Text (SMS) messages"</string>
     <!-- Settings screen, section heading for storage-specific settings -->
     <string name="pref_sms_storage_title">Storage</string>
+    <!-- Settings screen, section heading for display-specific settings -->
+    <string name="pref_display_title">Display</string>
 
     <!-- Settings item description for entering SIM card message screen -->
     <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
@@ -358,6 +360,11 @@
     <string name="pref_title_sms_split_counter">Split counter</string>
     <!-- Settings item description for boolean SMS Split 160 characters setting -->
     <string name="pref_summary_sms_split_counter">Adds counter to message ex. (1/2)</string>
+    
+    <!-- Settings item for boolean option to show the full datetime -->
+    <string name="pref_title_fulldate">Show full date</string>
+    <!-- Settings item description for boolean full datetime setting -->
+    <string name="pref_summary_fulldate">Show the full date for messages</string>
 
     <!-- The vibrate notification modes -->
     <string-array name="prefEntries_vibrateWhen">
