Mms / Emoji support: Fix for Unicode 6.1 emojis, Preference toggle fix, and Better dialog for insertion
My previous patch used the Softbank private unicode code page to encode and decode emojis.
PROBLEM: This was the technique used by iOS before version 5 and all the Japanese carriers.

Google and Apple have proposed a new code page which has been integrated into Unicode 6.0, then updated in 6.1
The full specification can be found here: http://www.unicode.org/~scherer/emoji4unicode/snapshot/full.html

SOLUTION: This patch changes the way emojis are encoded and adds a new decoding table, but keep both for compatibility.

Surrogate pairs are used, because of the way Java handles UTF-16 chars - these cannot be included in the XML resource file.

I also changed the strings to respect UI guidelines, and extended the dialog so users can add more than one emoji.

PS1: Initial patch
PS2/3/4: Fixed typos in the Softbank codes
PS5: Fix the 'Emoji support' setting toggle which used to disable only Emoji encoding, but not decoding
PS6/7: XML layout for the 'Insert emojis' dialog

Change-Id: I3e8644542b10409e547f0603f1b43e36bb4a8ba7

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -650,7 +650,7 @@
     <string name="saved_ringtone_fail">Couldn\'t save ringtone.</string>
     <!-- Menu item -->
     <string name="menu_insert_smiley">Insert smiley</string>
-    <string name="menu_insert_emoji">Insert emoji</string>
+    <string name="menu_insert_emoji">Insert emojis</string>
 
     <!-- This is the dialog title for the "Select link" dialog, shown when the user clicks on a
     chat in the chat history view if there are links in the chat message. The dialog displays the
