--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -154,6 +154,7 @@
     <string name="pref_mms_settings_title" msgid="55618772118264355">"多媒體訊息 (MMS)"</string>
     <string name="pref_sms_settings_title" msgid="5173078369851066881">"簡訊 (SMS)"</string>
     <string name="pref_sms_storage_title" msgid="9001233319190616445">"儲存空間"</string>
+    <string name="pref_display_title">顯示</string>
     <string name="pref_summary_manage_sim_messages" msgid="4141349892597640864">"管理 SIM 卡上的簡訊"</string>
     <string name="pref_summary_mms_delivery_reports" msgid="4874657984217756112">"傳送簡訊後要求傳送回條"</string>
     <string name="pref_summary_mms_read_reports" msgid="2748323864008907440">"傳送簡訊後要求讀取回條"</string>
@@ -173,6 +174,18 @@
     <string name="pref_summary_notification_vibrateWhen" msgid="669655090822561447">"收到通知時震動提醒"</string>
     <string name="pref_title_notification_ringtone" msgid="5467265237106229952">"選擇鈴聲"</string>
     <string name="pref_messages_to_save" msgid="3202539743892934926">"設定儲存的訊息數量"</string>
+    <string name="pref_title_sms_split_160">簡訊分割</string>
+    <string name="pref_summary_sms_split_160">每 160 字元分割為一件簡訊。</string>
+    <string name="pref_title_sms_split_counter">分割計數</string>
+    <string name="pref_summary_sms_split_counter">顯示簡訊計數(1/2)。</string>
+    <string name="pref_title_fulldate">顯示完整日期</string>
+    <string name="pref_summary_fulldate">為每件簡訊顯示完整日期。</string>
+    <string name="pref_title_hidesendername">隱藏寄件者姓名</string>
+    <string name="pref_summary_hidesendername">於通知欄隱藏寄件者姓名，並改以「收到」顯示。</string>
+    <string name="pref_title_hidemessage">隱藏完整訊息</string>
+    <string name="pref_summary_hidemessage">於通知欄隱藏完整的簡訊內容，並改以「新簡訊」顯示。</string>
+    <string name="hidden_sender">收到</string>
+    <string name="hidden_message_body">新簡訊</string>
   <string-array name="prefEntries_vibrateWhen">
     <item msgid="2520871831815631409">"一律"</item>
     <item msgid="6069709696037750627">"靜音時才啟用"</item>
@@ -328,4 +341,11 @@
     <item quantity="other" msgid="7338580381574463136">"<xliff:g id="NUMBER">%1$s</xliff:g> 人"</item>
   </plurals>
     <string name="disable_notifications_dialog_message" msgid="7644011234972074096">"要停止預設「簡訊」應用程式發出重複的簡訊通知嗎？"</string>
+    <string name="pref_extra_settings">其他設定</string>
+    <string name="pref_title_strip_unicode">過濾 unicode</string>
+    <string name="pref_summary_strip_unicode">於 160 字元簡訊中過濾不支援之 unicode 字元。</string>
+    <string name="pref_title_enable_emojis">啟用表情符號</string>
+    <string name="pref_summary_enable_emojis">啟用支援軟體銀行 unicode 表情符號，共 471 個。</string>
+    <string name="pref_title_pref_key_emojis_quick">表情符號快速鍵</string>
+    <string name="pref_summary_pref_key_emojis_quick">於輸入文字區左側顯示表情符號快速鍵。</string>
 </resources>
