--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -154,6 +154,7 @@
     <string name="pref_mms_settings_title" msgid="55618772118264355">"彩信 (MMS)"</string>
     <string name="pref_sms_settings_title" msgid="5173078369851066881">"短信 (SMS)"</string>
     <string name="pref_sms_storage_title" msgid="9001233319190616445">"存储"</string>
+    <string name="pref_display_title">显示</string>
     <string name="pref_summary_manage_sim_messages" msgid="4141349892597640864">"管理 SIM 卡中存储的信息"</string>
     <string name="pref_summary_mms_delivery_reports" msgid="4874657984217756112">"要求每次发送信息后都返回发送报告"</string>
     <string name="pref_summary_mms_read_reports" msgid="2748323864008907440">"要求每次发送信息后都返回已读回执"</string>
@@ -173,6 +174,18 @@
     <string name="pref_summary_notification_vibrateWhen" msgid="669655090822561447">"收到通知时还振动提醒"</string>
     <string name="pref_title_notification_ringtone" msgid="5467265237106229952">"选择铃声"</string>
     <string name="pref_messages_to_save" msgid="3202539743892934926">"设置要保存的信息数量"</string>
+    <string name="pref_title_sms_split_160">短信分割</string>
+    <string name="pref_summary_sms_split_160">将超过60个汉字或160个字母的短信分多条信息发送</string>
+    <string name="pref_title_sms_split_counter">分割序号</string>
+    <string name="pref_summary_sms_split_counter">显示分割后的短信序号，例： (1/2)</string>
+    <string name="pref_title_fulldate">显示完整日期</string>
+    <string name="pref_summary_fulldate">显示包括日期和时间的完整日期</string>
+    <string name="pref_title_hidesendername">隐藏发送者姓名</string>
+    <string name="pref_summary_hidesendername">收到短信时通知栏不显示发送者姓名，仅显示“收到信息”。</string>
+    <string name="pref_title_hidemessage">隐藏信息内容</string>
+    <string name="pref_summary_hidemessage">收到短信时通知栏不显示发送者姓名，仅显示“新信息”。</string>
+    <string name="hidden_sender">收到信息</string>
+    <string name="hidden_message_body">新信息</string>
   <string-array name="prefEntries_vibrateWhen">
     <item msgid="2520871831815631409">"始终"</item>
     <item msgid="6069709696037750627">"仅在静音时"</item>
@@ -283,6 +296,7 @@
     <string name="saved_ringtone" msgid="3847363932276708626">"已保存铃声。"</string>
     <string name="saved_ringtone_fail" msgid="4778500070919251116">"无法保存铃声。"</string>
     <string name="menu_insert_smiley" msgid="4964504393061025071">"插入表情符号"</string>
+    <string name="menu_insert_emoji">插入 emoji 表情</string>
     <string name="select_link_title" msgid="3371818607625768447">"选择操作"</string>
     <string name="slide_number" msgid="1923958526266726635">"幻灯片 <xliff:g id="NUMBER">%s</xliff:g>"</string>
   <plurals name="slide_duration">
@@ -324,8 +338,18 @@
     <string name="message_count_format" msgid="4434763220590778012">" <xliff:g id="NUMBER">%1$s</xliff:g>"</string>
     <string name="error_state" msgid="5177386717626893507">"状态不一致"</string>
     <string name="error_state_text" msgid="7918866106335387710">"会话邮件集和收件人的状态不一致。请为错误截图，并通过 http://go/droidanizer 向我们报告这一问题"</string>
+    <string name="label_mms_push">彩信推送</string>
+    <string name="desc_mms_push">从发件箱推送彩信到网络</string>
   <plurals name="recipient_count">
     <item quantity="other" msgid="7338580381574463136">"<xliff:g id="NUMBER">%1$s</xliff:g> 个人"</item>
   </plurals>
     <string name="disable_notifications_dialog_message" msgid="7644011234972074096">"要停止从默认“短信”应用程序接收重复的短信通知吗？"</string>
+    <string name="pref_extra_settings">其它设置</string>
+    <string name="pref_title_strip_unicode">过滤 unicode</string>
+    <string name="pref_summary_strip_unicode">在160字母的短信中用常规字符替换不支持的字符。</string>
+    <string name="pref_title_enable_emojis">启用 emoji 表情</string>
+    <string name="pref_summary_enable_emojis">启用支持日本软银的emoji表情(unicode)，共 471 个</string>
+    <string name="pref_title_pref_key_emojis_quick">emoji表情快捷按钮</string>
+    <string name="pref_summary_pref_key_emojis_quick">在文字输入区左边显示快捷按钮</string>
 </resources>
+
