Mms: Updated czech translation
Change-Id: I4137688b244f19fde5d87e5381e4ec908118a5d0
Signed-off-by: kecinzer <kecinzer@gmail.com>

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -350,4 +350,5 @@
     <string name="pref_summary_enable_emojis">Zapnout podporu speciálních 471 unikodových smajlíků</string>
     <string name="pref_title_pref_key_emojis_quick">Tlačítko smajlíků</string>
     <string name="pref_summary_pref_key_emojis_quick">Zobrazit tlačítko smajlíků vlevo od textového pole</string>
+    <string name="menu_insert_emoji">Vložit smajlíky</string>
 </resources>
