Added SMS Split by encoding and counter at end of message with settings
Added additional requirements into res/xml/mms_config.xml and src/com/android/mms/MmsConfig.java

All Credits to CM for their work. I just pulled it in.

Migrating features from CM7 to CM9
- http://review.cyanogenmod.com/#change,3316,patchset=1

Change-Id: I05f134e22f5f186dbb5c07bbb14e4489a2a27f9b
Signed-off-by: KAsp3rd <casper200519@gmail.com>

Conflicts:

	res/values/strings.xml
	res/xml/mms_config.xml
	src/com/android/mms/MmsConfig.java
	src/com/android/mms/transaction/SmsMessageSender.java

Signed-off-by: Stevespear426 <stephen.k.spear@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -799,6 +799,10 @@
 
     <!-- In message list items, this string builds the timestamp line when the message is in a group [CHAR LIMIT=NONE] -->
     <string name="message_timestamp_format"><xliff:g id="string" example="Fred Flinstone">%1$s</xliff:g>\u0020-\u0020<xliff:g id="string" example="9:39AM">%2$s</xliff:g></string>
+   <!-- Settings item for boolean option for SMS Split Counter -->
+   <string name="pref_title_sms_split_counter">Split counter</string>
+   <!-- Settings item description for boolean SMS Split 160 characters setting -->
+   <string name="pref_summary_sms_split_counter">Adds counter to message ex. (1/2)</string>
 
 </resources>
 
