Mms: Updated czech translation
Change-Id: Ib72665537f117ad2a2f1ce988ae78b4aca0da5a1
Signed-off-by: Petr Reznicek <kecinzer@gmail.com>

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -343,4 +343,7 @@
     <string name="attachment_picture" msgid="3709286281567284296">"Obrázek"</string>
     <string name="notification_separator" msgid="2334673105226536422">"  "</string>
     <string name="enumeration_comma" msgid="213598026698964628">", "</string>
+
+    <string name="pref_title_sms_split_counter">Počítadlo rozdělení</string>
+    <string name="pref_summary_sms_split_counter">Přidat počítadlo do zprávy. Např. (1/2)</string>
 </resources>
