--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -286,6 +286,7 @@
     <string name="saved_ringtone" msgid="3847363932276708626">"已保存铃声。"</string>
     <string name="saved_ringtone_fail" msgid="4778500070919251116">"无法保存铃声。"</string>
     <string name="menu_insert_smiley" msgid="4964504393061025071">"插入表情符号"</string>
+    <string name="menu_insert_emoji">插入 emoji 表情</string>
     <string name="select_link_title" msgid="3371818607625768447">"选择操作"</string>
     <string name="slide_number" msgid="1923958526266726635">"幻灯片 <xliff:g id="NUMBER">%s</xliff:g>"</string>
   <plurals name="slide_duration">
@@ -343,4 +344,15 @@
     <string name="attachment_picture" msgid="3709286281567284296">"图片"</string>
     <string name="notification_separator" msgid="2334673105226536422">"  "</string>
     <string name="enumeration_comma" msgid="213598026698964628">"、 "</string>
+    <!-- Settings item for boolean option for SMS Split Counter -->
+    <string name="pref_title_sms_split_counter">分割序号</string>
+    <!-- Settings item description for boolean SMS Split 160 characters setting -->
+    <string name="pref_summary_sms_split_counter">显示分割后的短信序号，例： (1/2)</string>
+
+    <!-- Extra Settings: -->
+    <string name="pref_extra_settings">其它设置</string>
+
+    <!-- Enable emojis -->
+    <string name="pref_title_enable_emojis">启用 emoji 表情</string>
+    <string name="pref_summary_enable_emojis">启用支持日本软银的emoji表情(unicode)，共 471 个</string>
 </resources>
