--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -346,4 +346,8 @@
 
     <string name="pref_title_sms_split_counter">Počítadlo rozdělení</string>
     <string name="pref_summary_sms_split_counter">Přidat počítadlo do zprávy. Např. (1/2)</string>
+    <string name="menu_insert_emoji">Vložit smajlíky</string>
+    <string name="pref_extra_settings">Speciální nastavení</string>
+    <string name="pref_title_enable_emojis">Zapnout smajlíky</string>
+    <string name="pref_summary_enable_emojis">Zapnout podporu speciálních 471 unikodových smajlíků</string>
 </resources>
