--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -798,5 +798,32 @@
     <string name="pref_title_enable_emojis">Emoji support</string>
     <string name="pref_summary_enable_emojis">Enable support for unicode emojis, a set of 471 nice emoticons</string>
 
+    <!-- Full timestamps -->
+    <string name="pref_title_mms_full_timestamp">Full timestamps</string>
+    <string name="pref_summary_mms_full_timestamp">Display both date and time in timestamps</string>
+    <!-- Which timestamps -->
+    <string name="pref_title_mms_use_sent_timestamp">Original timestamps</string>
+    <string name="pref_summary_mms_use_sent_timestamp">Display sent date instead of received date in timestamps</string>
+
+    <!-- QUICKMESSAGE SUPPORT -->
+    <!-- Preferences -->
+    <string name="pref_quickmessage">QuickMessage</string>
+    <string name="pref_quickmessage_title">Enable QuickMessage</string>
+    <string name="pref_quickmessage_summary">Display the QuickMessage pop-up dialog</string>
+    <string name="pref_wake_unlock_title">Wake and unlock</string>
+    <string name="pref_wake_unlock_summary">Wake and unlock device on incoming message (insecure lock screens only)</string>
+    <string name="pref_close_all_title">Close all</string>
+    <string name="pref_close_all_summary">Close button closes all messages</string>
+    <string name="message_counter_separator">of</string>
+
+    <!-- QM Dialog box buttons -->
+    <string name="button_close">Close</string>
+    <string name="button_view">View</string>
+
+    <!-- Hint text in message body field when keyboard is exposed -->
+    <string name="type_to_reply_text_enter_to_send">Type to reply</string>
+
+    <!-- QM Toast -->
+    <string name="toast_sending_message">Sending message</string>
 </resources>
 
