Mms: Add 'Quick reply' notification action
This commit leverages the QuickMessage functionality to add a
'Quick reply' action to a SMS notification.

It will only display if:
 - The QuickMessage pop-up is disabled (no need showing the pop-up twice)
 - It is a SMS
 - It is a single message or a thread from a single user

Change-Id: I09f308fdc210c7acd599419106d02e3c14e700a1
Screenshot:
 https://dl.dropbox.com/u/50993944/Screenshot_2012-09-02-11-11-03.png

Thanks again to Blunden for the drawables

Conflicts:

	res/values/strings.xml
	src/com/android/mms/transaction/MessagingNotification.java
Change-Id: Ic086058dab582775eecefdd72c25b0a3cf428a6f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -825,5 +825,9 @@
 
     <!-- QM Toast -->
     <string name="toast_sending_message">Sending message</string>
+
+    <!-- QM - Quick reply -->
+    <string name="qm_quick_reply">Quick reply</string>
+
 </resources>
 
