--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -370,6 +370,10 @@
     <string name="pref_title_fulldate">Show full date</string>
     <!-- Settings item description for boolean full datetime setting -->
     <string name="pref_summary_fulldate">Show the full date for messages</string>
+    <!-- Settings item for boolean option to show the call back button in the quick reply notification -->
+    <string name="pref_title_quickreply_callbutton">Show call back button</string>
+    <!-- Settings item description for boolean full datetime setting -->
+    <string name="pref_summary_quickreply_callbutton">Show the call back button in the quick reply notification</string>
 
     <!-- The vibrate notification modes -->
     <string-array name="prefEntries_vibrateWhen">
