QuickReply: multi SMS reply WIP
This is for when you get SMS from more than 1 person to allow quick reply.
The base concept of this is working.
You get an alert asking you who you want to reply to....

Any ideas for improvement are welcome as well as bug reports

-Patch 2: removed unused imports
-Patch 3: allows multiple messages from the same contact to pass through
to the quick reply from the multi reply.  Added text counter.
Added support to send more than 1 SMS for more than 160 char.
-Patch 4: rebase
-Patch 5: converted to strings to make translators and KhasMek happy

Change-Id: I690e936ffdc900619ae10ecc3b3a9c7b4dfe9b82
Signed-off-by: Adam Fisch <adammfisch@gmail.com>

Conflicts:

	src/com/android/mms/transaction/MessagingNotification.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -877,5 +877,6 @@
     <string name="qr_pick_smiley">Insert Smiley</string>
     <string name="qr_pick_emoji">Insert Emoji</string>
     <string name="qr_close_popup">Close</string>
+    <string name="qr_multi_ask">Who do you want to reply to?</string>
 
 </resources>
