--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -374,6 +374,10 @@
     <string name="pref_title_quickreply_callbutton">Show call back button</string>
     <!-- Settings item description for boolean full datetime setting -->
     <string name="pref_summary_quickreply_callbutton">Show the call back button in the quick reply notification</string>
+    <!-- Settings item for boolean option to auto-open the quick reply notification -->
+    <string name="pref_title_quickreply_autoopen">Auto-Open Quick Reply </string>
+    <!-- Settings item description for boolean option to auto-open the quick reply notification -->
+    <string name="pref_summary_quickreply_autoopen">Open the </string>
 
     <!-- The vibrate notification modes -->
     <string-array name="prefEntries_vibrateWhen">
