--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -374,6 +374,10 @@
     <string name="pref_title_quickreply_callbutton">Show call back button</string>
     <!-- Settings item description for boolean full datetime setting -->
     <string name="pref_summary_quickreply_callbutton">Show the call back button in the quick reply notification</string>
+    <!-- Settings item for boolean option to auto-open the quick reply notification -->
+    <string name="pref_title_quickreply_autoopen">Auto-Open Quick Reply </string>
+    <!-- Settings item description for boolean option to auto-open the quick reply notification -->
+    <string name="pref_summary_quickreply_autoopen">Automatically open the Quick Reply window when new messages come in (except when the screen is locked)</string>
 
     <!-- The vibrate notification modes -->
     <string-array name="prefEntries_vibrateWhen">
@@ -878,5 +882,7 @@
     <string name="qr_pick_emoji">Insert Emoji</string>
     <string name="qr_close_popup">Close</string>
     <string name="qr_multi_ask">Who do you want to reply to?</string>
+    <string name="pref_lock_sms">Enable lockscreen popup</string>
+    <string name="pref_lock_sms_summary">Allow Quick Reply auto-open to pop up on locked screen</string>
 
 </resources>
