Add back Quick Emoji
-I missed this feature from ICS. Disabled by default.

patchset 2: changed emoticon to smiley face.

Original thread: http://gerrit.sudoservers.com/#/c/183/1

Change-Id: I474f6f9ecd50e2e66bd655b9a3029cc97550f1b4

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -863,6 +863,8 @@
     <!-- Enable emojis -->
     <string name="pref_title_enable_emojis">Emoji support</string>
     <string name="pref_summary_enable_emojis">Enable support for unicode emojis, a set of 471 nice emoticons</string>
+    <string name="pref_title_pref_key_emojis_quick">Quick emojis button</string>
+    <string name="pref_summary_pref_key_emojis_quick">Shows a button to the left of text input-area for quick access</string>
 
     <!-- Quick Reply -->
     <string name="quick_call_back">Call Back</string>
