--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -374,6 +374,9 @@
     <string name="pref_title_quickreply_callbutton">Show call back button</string>
     <!-- Settings item description for boolean full datetime setting -->
     <string name="pref_summary_quickreply_callbutton">Show the call back button in the quick reply notification</string>
+    <!-- Settings item for the soft keyboard picker -->
+    <string name="pref_title_input_type">Soft keyboard type</string>
+    <string name="pref_summary_input_type">Select the soft keyboard to use when composing messages</string>
 
     <!-- The vibrate notification modes -->
     <string-array name="prefEntries_vibrateWhen">
@@ -863,6 +866,11 @@
     <!-- Enable emojis -->
     <string name="pref_title_enable_emojis">Emoji support</string>
     <string name="pref_summary_enable_emojis">Enable support for unicode emojis, a set of 471 nice emoticons</string>
+
+    <!-- Soft Keyboard Type -->
+    <string name="pref_keyboard_emoji">Emoji</string>
+    <string name="pref_keyboard_send">Enter to Send</string>
+    <string name="pref_keyboard_new_line">Enter for a new line</string>
 
     <!-- Quick Reply -->
     <string name="quick_call_back">Call Back</string>
