Add group mms threading (1/3)
Change-Id: I339c19563998adb1436d26950c44efb423ee181c

Conflicts:

	res/values/strings.xml
	src/com/android/mms/ui/MessagingPreferenceActivity.java

Patch 2:Clean up and correction

Change-Id: If33ffe9e21462b07fb092a5e5d366d6e69c6c3d6

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -109,6 +109,8 @@
     <string name="copy_message_text">Copy text</string>
     <!-- Header for context menu on an individual message -->
     <string name="message_options">Message options</string>
+    <!-- Header for context menu on an individual slideshow -->
+    <string name="slideshow_options">Slideshow options</string>
 
     <!-- Button text on edit slide screen indicating the user wants to finish editing that slide -->
     <string name="done">Done</string>
@@ -374,6 +376,10 @@
     <string name="pref_title_quickreply_callbutton">Show call back button</string>
     <!-- Settings item description for boolean full datetime setting -->
     <string name="pref_summary_quickreply_callbutton">Show the call back button in the quick reply notification</string>
+    <!-- Settings item for boolean option for group MMS sending/receiving -->
+    <string name="pref_title_mms_group_mms">Group messaging</string>
+    <!-- Settings item description for boolean group MMS sending/receiving -->
+    <string name="pref_summary_mms_group_mms">Enable group MMS sending and receiving</string>
 
     <!-- The vibrate notification modes -->
     <string-array name="prefEntries_vibrateWhen">
