--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -881,4 +881,13 @@
     <string name="qr_close_popup">Close</string>
     <string name="qr_multi_ask">Who do you want to reply to?</string>
 
+    <!-- Change Vibrate pattern/method for message notification -->
+    <string name="pref_title_mms_notification_vibrate_settings">Vibrate settings</string>
+    <string name="pref_title_mms_notification_vibrate_pattern">Vibrate pattern</string>
+    <string name="pref_summary_mms_notification_vibrate_pattern">Change vibrate pattern</string>
+    <string name="pref_title_mms_notification_vibrate_call">Vibrate on Call</string>
+    <string name="pref_summary_mms_notification_vibrate_call">Allow vibrate while on a call</string>
+    <string name="pref_title_mms_notification_vibrate_custom">Custom vibrate pattern</string>
+    <string name="pref_text_mms_notification_vibrate_custom">Format off/on in milliseconds: off, on, off, on, ...</string>
+
 </resources>
